ya funciona, le faltaa sqlite y el repository

--- a/src/consume/static/web/index.html
+++ b/src/consume/static/web/index.html
@@ -10,19 +10,12 @@
 <body>
 
     <div class="jumbotron text-center">
-        <h1>Json-reportes-back</h1>
-        <p>Back de servicio para transformar JSONs en reportes mediante templates</p>
+        <h1>Template Python</h1>
+        <p>And this is where I'd put my FrontEnd</p>
     </div>
-
-    <div class="row bg-faded">
-        <div class="col-4 mx-auto text-center">
-            <img src="img/reports.gif">
-        </div>
-    </div>
-    <span class="border border-white"></span>
 
     <div class="text-center">
-        <img src="img/meme.jpg" class="rounded mx-auto d-block" style="width: 500px; height: 700px;">
+        <img src="img/meme.gif" class="rounded mx-auto d-block">
     </div>
     <span class="border border-white"></span>
 
